@@ -1,3 +1,9 @@
+2013-09-21 02:06-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* PBXFileReference.m: Use C99 as default.  Need to start thinking
+	about a specs file which will allow definition of defaults on
+	a per compiler/platform basis.
+
 2013-08-31  Fred Kiefer <FredKiefer@gmx.de>
 
 	* PBXCoder.h,
